force-app/main/default/objects/Custom_Opportunity__c/Custom_Opportunity__c.object-meta.xml
<CustomObject>
    <label>OpptyMax</label>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpptyMax</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>