force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Account_Name__c</fullName>
    <label>Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>