force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Amount__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>