force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Case_Status__c</fullName>
    <description>Whenever Case is created status updated to Case Created</description>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>