force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_CM__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_CM__c</fullName>
    <label>CM%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>