force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please Select a Relationship Account.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Relationship_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offline Opportunities</relationshipLabel>
    <relationshipName>Offline_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>