force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Deal_Path__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Deal_Path__c</fullName>
    <description>Opportunity Deal Path</description>
    <label>Deal Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Deal Desk</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>