force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Expected_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Expected_Order_Date__c</fullName>
    <label>Expected Order Date</label>
    <type>Date</type>
</CustomField>