force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Forecast__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Forecast__c</fullName>
    <inlineHelpText>Commit to Commit (90%) 
Commit at Risk – Commit at risk (75%) 
Upside – Upside Opportunity (&lt;75%)</inlineHelpText>
    <label>Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Commit at Risk</fullName>
            </value>
            <value>
                <fullName>Omit</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
                <default>true</default>
                <label>Upside</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>