force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_FromSmax__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_FromSmax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FromSmax</label>
    <type>Checkbox</type>
</CustomField>