force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_LE_Account__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_LE_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Legal Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offline Opportunities (LE Account)</relationshipLabel>
    <relationshipName>Offline_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>