force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Opportunity_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Opportunity_Creation_Status__c</fullName>
    <label>Sync status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>FAILURE: related Commercial Account not found. Contact Account Owner to fix this and recreate Oppty</fullName>
            </value>
            <value>
                <fullName>Awaiting sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>