force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Opportunity_Currency__c</fullName>
    <label>Opportunity Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>