force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Opportunity_Elgible_Status__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Opportunity_Elgible_Status__c</fullName>
    <label>Deal Machine Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>