force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Opportunity_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Opportunity Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>