force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Opportunity_Summary__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Opportunity_Summary__c</fullName>
    <label>Opportunity Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>