force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Oppty_NotActive__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Oppty_NotActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oppty Not Active</label>
    <type>Checkbox</type>
</CustomField>