force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_PO__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_PO__c</fullName>
    <label>PO Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>