force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Region__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Region__c</fullName>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>