force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_ServiceTeam_Leader__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_ServiceTeam_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceTeam Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpptyMax</relationshipName>
    <type>Lookup</type>
</CustomField>