force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Standard_Oppty__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Standard_Oppty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Offline Opportunities</relationshipLabel>
    <relationshipName>Offline_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>