force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Tier2_PnL__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Tier2_PnL__c</fullName>
    <label>Tier 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Digital Solutions</fullName>
            </value>
            <value>
                <fullName>Downstream Technology Solutions</fullName>
            </value>
            <value>
                <fullName>Oil Field Equipment</fullName>
            </value>
            <value>
                <fullName>Oil Field Services</fullName>
            </value>
            <value>
                <fullName>Turbomachinery Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>