force-app/main/default/objects/Custom_Opportunity__c/fields/GE_OG_Tier3_PnL__c.field-meta.xml
<CustomField>
    <fullName>GE_OG_Tier3_PnL__c</fullName>
    <label>Primary Tier 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GE_OG_Tier2_PnL__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Sensors</fullName>
            </value>
            <value>
                <fullName>Artificial Lift</fullName>
            </value>
            <value>
                <fullName>Bently Nevada</fullName>
            </value>
            <value>
                <fullName>Control software &amp; solutions</fullName>
            </value>
            <value>
                <fullName>Control Solutions</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Downhole Technology</fullName>
            </value>
            <value>
                <fullName>DP&amp;S</fullName>
            </value>
            <value>
                <fullName>DP&amp;S - Installation</fullName>
            </value>
            <value>
                <fullName>DP&amp;S - New Units</fullName>
            </value>
            <value>
                <fullName>DP&amp;S - Opex Contractual</fullName>
            </value>
            <value>
                <fullName>DP&amp;S - Opex Transactional</fullName>
            </value>
            <value>
                <fullName>DP&amp;S - Upgrades</fullName>
            </value>
            <value>
                <fullName>DT/LS/Zenith</fullName>
            </value>
            <value>
                <fullName>Electric Submersible Pumps</fullName>
            </value>
            <value>
                <fullName>Flexible Pipe Systems</fullName>
            </value>
            <value>
                <fullName>Flow &amp; Process Technologies</fullName>
            </value>
            <value>
                <fullName>Gas Processing</fullName>
            </value>
            <value>
                <fullName>GP - New Units</fullName>
            </value>
            <value>
                <fullName>GP - New Units Installation</fullName>
            </value>
            <value>
                <fullName>GP - Parts &amp; Services</fullName>
            </value>
            <value>
                <fullName>GP - Upgrades</fullName>
            </value>
            <value>
                <fullName>Inspection Technologies</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Logging Services</fullName>
            </value>
            <value>
                <fullName>Measurement &amp; Sensing</fullName>
            </value>
            <value>
                <fullName>Measurement Solutions</fullName>
            </value>
            <value>
                <fullName>New Units</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>Opex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>