force-app/main/default/objects/Custom_Opportunity__c/fields/GE_SS_Account_Legal_Entity_Unite_Id__c.field-meta.xml
<CustomField>
    <fullName>GE_SS_Account_Legal_Entity_Unite_Id__c</fullName>
    <description>R-31943</description>
    <label>Account Legal Entity Unite Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>